; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_dom_read_string.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_dom_read_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dom_reader_state = type { i32 }
%struct.rmsgpack_dom_value = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i8*, i32 }

@RDT_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*)* @dom_read_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dom_read_string(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.dom_reader_state*, align 8
  %8 = alloca %struct.rmsgpack_dom_value*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.dom_reader_state*
  store %struct.dom_reader_state* %10, %struct.dom_reader_state** %7, align 8
  %11 = load %struct.dom_reader_state*, %struct.dom_reader_state** %7, align 8
  %12 = call i64 @dom_reader_state_pop(%struct.dom_reader_state* %11)
  %13 = inttoptr i64 %12 to %struct.rmsgpack_dom_value*
  store %struct.rmsgpack_dom_value* %13, %struct.rmsgpack_dom_value** %8, align 8
  %14 = load i32, i32* @RDT_STRING, align 4
  %15 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %8, align 8
  %16 = getelementptr inbounds %struct.rmsgpack_dom_value, %struct.rmsgpack_dom_value* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %8, align 8
  %19 = getelementptr inbounds %struct.rmsgpack_dom_value, %struct.rmsgpack_dom_value* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  store i32 %17, i32* %21, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %8, align 8
  %24 = getelementptr inbounds %struct.rmsgpack_dom_value, %struct.rmsgpack_dom_value* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  store i8* %22, i8** %26, align 8
  ret i32 0
}

declare dso_local i64 @dom_reader_state_pop(%struct.dom_reader_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
